// Original file: streamlist.proto


export interface ChannelProfileDetails {
  'channel_url'?: (string);
  'display_name'?: (string);
  'profile_image_url'?: (string);
  'channel_id'?: (string);
}

export interface ChannelProfileDetails__Output {
  'channel_url'?: (string);
  'display_name'?: (string);
  'profile_image_url'?: (string);
  'channel_id'?: (string);
}
