// Original file: streamlist.proto


export interface LiveChatGiftMembershipReceivedDetails {
  'member_level_name'?: (string);
  'gifter_channel_id'?: (string);
  'associated_membership_gifting_message_id'?: (string);
}

export interface LiveChatGiftMembershipReceivedDetails__Output {
  'member_level_name'?: (string);
  'gifter_channel_id'?: (string);
  'associated_membership_gifting_message_id'?: (string);
}
