// Original file: streamlist.proto


export interface LiveChatMemberMilestoneChatDetails {
  'member_level_name'?: (string);
  'member_month'?: (number);
  'user_comment'?: (string);
}

export interface LiveChatMemberMilestoneChatDetails__Output {
  'member_level_name'?: (string);
  'member_month'?: (number);
  'user_comment'?: (string);
}
