// Original file: streamlist.proto


export interface LiveChatMembershipGiftingDetails {
  'gift_memberships_count'?: (number);
  'gift_memberships_level_name'?: (string);
}

export interface LiveChatMembershipGiftingDetails__Output {
  'gift_memberships_count'?: (number);
  'gift_memberships_level_name'?: (string);
}
