// Original file: streamlist.proto


export interface LiveChatMessageAuthorDetails {
  'is_verified'?: (boolean);
  'is_chat_owner'?: (boolean);
  'is_chat_sponsor'?: (boolean);
  'is_chat_moderator'?: (boolean);
  'channel_url'?: (string);
  'display_name'?: (string);
  'profile_image_url'?: (string);
  'channel_id'?: (string);
}

export interface LiveChatMessageAuthorDetails__Output {
  'is_verified'?: (boolean);
  'is_chat_owner'?: (boolean);
  'is_chat_sponsor'?: (boolean);
  'is_chat_moderator'?: (boolean);
  'channel_url'?: (string);
  'display_name'?: (string);
  'profile_image_url'?: (string);
  'channel_id'?: (string);
}
