// Original file: streamlist.proto


export interface LiveChatMessageListRequest {
  'live_chat_id'?: (string);
  'hl'?: (string);
  'profile_image_size'?: (number);
  'max_results'?: (number);
  'page_token'?: (string);
  'part'?: (string)[];
}

export interface LiveChatMessageListRequest__Output {
  'live_chat_id'?: (string);
  'hl'?: (string);
  'profile_image_size'?: (number);
  'max_results'?: (number);
  'page_token'?: (string);
  'part'?: (string)[];
}
