// Original file: streamlist.proto


export interface SuperStickerMetadata {
  'sticker_id'?: (string);
  'alt_text'?: (string);
  'alt_text_language'?: (string);
}

export interface SuperStickerMetadata__Output {
  'sticker_id'?: (string);
  'alt_text'?: (string);
  'alt_text_language'?: (string);
}
